version/0.12/_sources/api/solver/_autosummary/settings/polynomial.rst.txt
:orphan:

.. _polynomial:

polynomial
==========

.. currentmodule:: ansys.fluent.core.solver.settings_231.polynomial

.. autoclass:: polynomial
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================================   ==========================================================================

Child                                                                                                                       Summary

======================================================   ==========================================================================
:ref:`number_of_coefficients <number_of_coefficients>`       Specify number of polynomial coefficients (polynomial order plus one).

:ref:`coefficients <coefficients>`                                                                 Specify polynomial coefficients.

======================================================   ==========================================================================

.. rubric:: Included in:

================================================================   ===============================================

Parent                                                                                                     Summary

================================================================   ===============================================
:ref:`density <density>`                                                                          'density' child.

:ref:`viscosity <viscosity>`                                                                    'viscosity' child.

:ref:`specific_heat <specific_heat>`                                                        'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity>`                                   'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient>`                             'absorption_coefficient' child.

:ref:`partition_coeff <partition_coeff>`                                                  'partition_coeff' child.

:ref:`scattering_coefficient <scattering_coefficient>`                             'scattering_coefficient' child.

:ref:`uds_diffusivities_child <uds_diffusivities_child>`                 'child_object_type' of uds_diffusivities.

:ref:`diffusivity <diffusivity>`                                                              'diffusivity' child.

:ref:`diffusivity_0 <diffusivity_0>`                                                        'diffusivity_0' child.

:ref:`diffusivity_1 <diffusivity_1>`                                                        'diffusivity_1' child.

:ref:`diffusivity_2 <diffusivity_2>`                                                        'diffusivity_2' child.

:ref:`radial_diffusivity <radial_diffusivity>`                                         'radial_diffusivity' child.

:ref:`tangential_diffusivity <tangential_diffusivity>`                             'tangential_diffusivity' child.

:ref:`axial_diffusivity <axial_diffusivity>`                                            'axial_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                                'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`                 'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                      'lithium_diffusivity' child.

:ref:`speed_of_sound <speed_of_sound>`                                                     'speed_of_sound' child.

:ref:`saturation_pressure <saturation_pressure>`                                      'saturation_pressure' child.

:ref:`specific_heat <specific_heat_1>`                                                      'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                                 'thermal_conductivity' child.

:ref:`planar_conductivity <planar_conductivity>`                                      'planar_conductivity' child.

:ref:`transverse_conductivity <transverse_conductivity>`                          'transverse_conductivity' child.

:ref:`radial_conductivity <radial_conductivity>`                                      'radial_conductivity' child.

:ref:`tangential_conductivity <tangential_conductivity>`                          'tangential_conductivity' child.

:ref:`axial_conductivity <axial_conductivity>`                                         'axial_conductivity' child.

:ref:`conductivity_0 <conductivity_0>`                                                     'conductivity_0' child.

:ref:`conductivity_1 <conductivity_1>`                                                     'conductivity_1' child.

:ref:`conductivity_2 <conductivity_2>`                                                     'conductivity_2' child.

:ref:`conductivity <conductivity>`                                                           'conductivity' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                           'scattering_coefficient' child.

:ref:`viscosity <viscosity_1>`                                                                  'viscosity' child.

:ref:`specific_heat <specific_heat_2>`                                                      'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                                 'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                           'absorption_coefficient' child.

:ref:`species_diffusivity_child <species_diffusivity_child>`           'child_object_type' of species_diffusivity.

:ref:`density <density_3>`                                                                        'density' child.

:ref:`specific_heat <specific_heat_3>`                                                      'specific_heat' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                            'thermophoretic_co' child.

:ref:`viscosity <viscosity_2>`                                                                  'viscosity' child.

:ref:`dpm_surften <dpm_surften>`                                                              'dpm_surften' child.

:ref:`electric_conductivity <electric_conductivity_1>`                              'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity_1>`               'dual_electric_conductivity' child.

:ref:`binary_diffusivity <binary_diffusivity_1>`                                       'binary_diffusivity' child.

:ref:`binary_diffusivity <binary_diffusivity>`                                         'binary_diffusivity' child.

:ref:`vapor_pressure <vapor_pressure>`                                                     'vapor_pressure' child.

:ref:`scattering_factor <scattering_factor_1>`                                          'scattering_factor' child.

:ref:`emissivity <emissivity_1>`                                                               'emissivity' child.

:ref:`dpm_surften <dpm_surften_1>`                                                            'dpm_surften' child.

:ref:`density <density_4>`                                                                        'density' child.

================================================================   ===============================================

